loaded that input tags into DOM

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                placeholder="Operator 1"
                spellcheck="false">
         
-        <select name="equals" id="equals">
+        <select name="operation" id="operation">
             <option value="equals">==</option>
             <option value="not-equals">!=</option>
             <option value="bigger">></option>
